fixed git issues inside of docker
